// Copyright 2023 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.net.http.server;

import "data/app/app_info.proto";

option go_package = "personal-website-v2/go-data/net/http/server;server";

// Proto file describing the Response.

// The response info.
message ResponseInfo {
    // The unique ID to identify the response.
    string id = 1;

    // The app info.
    personalwebsite.app.AppInfo app = 2;

    // The app session ID.
    uint64 app_session_id = 3;

    // The HTTP server ID.
    uint32 http_server_id = 4;

    // The request ID.
    string request_id = 5;

    // The response time.
    int64 timestamp = 6;

    // The status code of the response.
    int64 status_code = 7;

    // The size of the response body (number of bytes written in the body).
    int64 body_size = 8;

    // The content type of the response.
    string content_type = 9;
}
